# edgeware-node

modules/edge-governance/: Cargo.toml
modules/edge-governance/src/: governance.rs
modules/edge-identity/: Cargo.toml
modules/edge-voting/: Cargo.toml
modules/edge-voting/src/: lib.rs  voting.rs
node/cli/: Cargo.toml
node/executor/: Cargo.toml
node/executor/src/: lib.rs
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
node/runtime/wasm/: Cargo.toml
node/service/: Cargo.toml
