[package]
name = "edge-voting"
version = "0.1.0"
authors = ["Drew Stone <drew@commonwealth.im>"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "gui-debug-edge"}
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "gui-debug-edge" }

[features]
default = ["std"]
std = [
    "serde/std",
    "parity-codec/std",
    "srml-support/std",
    "srml-system/std",
]
